<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/settingsTitle"
        android:textSize="@dimen/text_size"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/soundTitle"
        android:layout_below="@id/settingsTitle"
        android:textSize="@dimen/text_size"
        android:text="@string/sound_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:text="@string/on_or_off"
        android:layout_below="@id/soundTitle"
        android:id="@+id/checkBoxSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>