<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context="com.example.android.project.MainActivity">

    <Button
        android:onClick="handleBtnClick"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:textSize="@dimen/text_size"
        android:id="@+id/viewListBtn"
        android:text="@string/view_list_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="handleBtnClick"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:textSize="@dimen/text_size"
        android:id="@+id/addItemBtn"
        android:text="@string/add_item_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="handleBtnClick"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:textSize="@dimen/text_size"
        android:id="@+id/clearListBtn"
        android:text="@string/clear_list_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
